--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -364,6 +364,7 @@ ctx.stroke()
 </p><h3>w14_ex</h3>
 <p><span>請根據兩個圓繪圖所圍成的</span><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/0e370b2ad0c429ab4c8905244022c27cfca8cfba/two_cicle_fill_ex1.py">區域</a><span>(目前圍成三個區域, 但若圓心移動可能彼此獨立)進行不同顏色著色, 條件是當各圓半徑與圓心座標變動時, 程式只需輸入兩個圓的圓心座標與半徑, 就可以完成各區域的著色任務.</span></p>
 <p><span>心得:利用所提供的程式，利用ai來完成題目，運用和w13作業相差無幾的方式來解決</span></p>
+<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/1d46aaa7172f65ab6531f2e05779fb85/raw/0a53940b23972833e2b536918ec83d2067251c32/hw1.py">解</a></span></p>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="/static/brython.js"></script>
