--- a/content/w13_hw.html
+++ b/content/w13_hw.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW 1 Exam.html'>HW 1 Exam</a><ul class='dropdown'><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w11_hw.html'>w11_hw</a><li><a href='w12.html'>w12</a><li><a href='w13_hw.html'>w13_hw</a><li><a href='w14_ex.html'>w14_ex</a></li></li></ul></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW 1 Exam.html'>HW 1 Exam</a><ul class='dropdown'><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w11_hw.html'>w11_hw</a><li><a href='w12.html'>w12</a><li><a href='w12_hw.html'>w12_hw</a><li><a href='w13_hw.html'>w13_hw</a><li><a href='w14_ex.html'>w14_ex</a></li></li></ul></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w14_ex.html'>Next</a> >> w14_ex<br /><h1>w13_hw</h1>
+    <div id="tipue_search_content">w12_hw << <a href='w12_hw.html'>Previous</a> <a href='w14_ex.html'>Next</a> >> w14_ex<br /><h1>w13_hw</h1>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="./../cmsimde/static/brython.js"></script>
@@ -156,164 +156,135 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 </script>
 </p>
 <div id="brython_div1">心得:這如果沒有chat gpt 和朋友的幫助我畫不出來</div>
-<div><a href="https://gist.github.com/LYX41323113/90d5fdc12ba654118d97fd7c32a4598f" title="解">https://gist.github.com/LYX41323113/90d5fdc12ba654118d97fd7c32a4598f</a></div>
+<div><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/90d5fdc12ba654118d97fd7c32a4598f/raw/2c99a20756e22962b96831139d3bfce5c003fcbb/hw1.py">解</a></div>
 <p>
 <script type="text/python3">
 from browser import html
 from browser import document as doc
+import math
 
-# 利用 html 建立 canvas 超文件物件
-canvas = html.CANVAS(width=400, height=400)
+canvas = html.CANVAS(width=500, height=500)
 brython_div = doc["brython_div1"]
 brython_div <= canvas
 
 ctx = canvas.getContext("2d")
-ctx.lineWidth = 1  # 設定邊框線寬
+ctx.lineWidth = 4
 
-# 繪製對角線，顏色設定為藍色
-ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+# 混色的
+ctx.globalCompositeOperation = "screem"
+
+# 黑邊圓*2 (每個畫四個邊邊)
+ctx.strokeStyle = 'black'
+
+# 第一個圓
 ctx.beginPath()
-ctx.moveTo(20, 20)  # 調整起點位置
-ctx.lineTo(100, 100)  # 第一條對角線，縮小大小
-ctx.stroke()
-
-# 繪製外接圓，圓心位於第一個矩形的中央
-center_x1 = 20 + 80 / 2  # 第一個矩形的X中心
-center_y1 = 20 + 80 / 2  # 第一個矩形的Y中心
-
-# 半徑為第一個矩形對角線的一半
-radius1 = (80 * (2 ** 0.5)) / 2
-
-# 繪製外接圓
-ctx.strokeStyle = 'green'  # 設定圓的顏色為綠色
-ctx.beginPath()
-ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)  # 圓心 (center_x1, center_y1) 和半徑
-ctx.stroke()
-
-# 繪製外接圓，圓心位於第二個矩形的中央
-center_x2 = 60 + 80 / 2  # 第二個矩形的X中心
-center_y2 = 60 + 80 / 2  # 第二個矩形的Y中心
-
-# 半徑為第二個矩形對角線的一半
-radius2 = (80 * (2 ** 0.5)) / 2
-
-# 繪製外接圓
-ctx.strokeStyle = 'purple'  # 設定圓的顏色為紫色
-ctx.beginPath()
-ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)  # 圓心 (center_x2, center_y2) 和半徑
-ctx.stroke()
-
-# 繪製第一個矩形，並填充顏色
-ctx.fillStyle = 'yellow'  # 設定填充顏色為黃色
-ctx.strokeStyle = 'red'   # 設定邊框顏色為紅色
-
-ctx.rect(20, 20, 80, 80)  # 設定矩形的位置和大小，縮小為 80x80
-ctx.stroke()  # 繪製邊框
-ctx.beginPath()
-
-# 繪製第二個矩形
-ctx.strokeStyle = 'green'    # 設定邊框顏色為綠色
-ctx.beginPath()
-ctx.rect(60, 60, 80, 80)  # 設定第二個矩形的位置和大小，縮小為 60x60
-ctx.stroke()  # 繪製邊框
-
-# 填充圓形的區域，排除與正方形的重疊部分
-ctx.globalCompositeOperation = 'source-over'  # 設定為填充模式
-ctx.fillStyle = 'lightblue'  # 設定圓形內部填充顏色為淺藍色
-
-# 填充第一個圓形
-ctx.beginPath()
-ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)
+ctx.arc(160, 160, 141, 0.25 * math.pi, 0.75 * math.pi)
+ctx.fillStyle = "SkyBlue"  
 ctx.fill()
-
-# 填充第二個圓形
-ctx.beginPath()
-ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)
-ctx.fill()
-
-# 刪除圓形與正方形重疊的區域
-ctx.globalCompositeOperation = 'destination-out'  # 設定為刪除重疊區域模式
-
-# 刪除第一個圓與正方形重疊的區域
-ctx.beginPath()
-ctx.rect(20, 20, 80, 80)  # 第一個矩形區域
-ctx.fill()
-
-# 刪除第二個圓與正方形重疊的區域
-ctx.beginPath()
-ctx.rect(60, 60, 80, 80)  # 第二個矩形區域
-ctx.fill()
-
-# 填充重疊區域的顏色（位於兩個正方形重疊的區域）
-ctx.globalCompositeOperation = 'source-over'  # 恢復填充模式
-ctx.fillStyle = 'orange'  # 設定重疊區域填充顏色為橙色
-
-# 填充第一個矩形的內部
-ctx.globalCompositeOperation = 'source-over'  # 設定為填充模式
-ctx.fillStyle = 'lightyellow'  # 設定填充顏色
-ctx.beginPath()
-ctx.rect(20, 20, 80, 80)  # 第一個矩形區域
-ctx.fill()
-
-# 填充第二個矩形的內部
-ctx.fillStyle = 'lightgreen'  # 設定填充顏色
-ctx.beginPath()
-ctx.rect(60, 60, 80, 80)  # 第二個矩形區域
-ctx.fill()
-
-# 填充第一個圓形和矩形之間的空白區域
-ctx.fillStyle = 'lightblue'  # 設定填充顏色
-ctx.beginPath()
-ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)
-ctx.rect(20, 20, 80, 80)  # 使用複合模式
-ctx.globalCompositeOperation = 'destination-over'  # 填充背景模式
-ctx.fill()
-
-# 填充第二個圓形和矩形之間的空白區域
-ctx.fillStyle = 'lightpurple'  # 設定填充顏色
-ctx.beginPath()
-ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)
-ctx.rect(60, 60, 80, 80)  # 使用複合模式
-ctx.globalCompositeOperation = 'destination-over'
-ctx.fill()
-
-# 重置繪圖操作模式
-ctx.globalCompositeOperation = 'source-over'
-
-
-# 重疊區域填充
-ctx.beginPath()
-ctx.rect(60, 60, 40, 40)  # 重疊區域的範圍 (兩個矩形重疊部分)
-ctx.fill()
-
-# 重新繪製斜線，確保它在最上層
-ctx.strokeStyle = 'blue'  # 設定斜線顏色為藍色
-ctx.beginPath()
-ctx.moveTo(20, 20)
-ctx.lineTo(140, 140)  # 斜線
-ctx.stroke()
-
-# 最後繪製所有的邊框，確保線條不被遮蓋
-ctx.strokeStyle = 'red'   # 第一個矩形的邊框顏色
-ctx.beginPath()
-ctx.rect(20, 20, 80, 80)  # 第一個矩形的位置和大小
-ctx.stroke()
-
-ctx.strokeStyle = 'green'  # 第二個矩形的邊框顏色
-ctx.beginPath()
-ctx.rect(60, 60, 80, 80)  # 第二個矩形的位置和大小
-ctx.stroke()
-
-ctx.strokeStyle = 'black'  # 圓形邊框顏色
-ctx.beginPath()
-ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)  # 第一個圓
 ctx.stroke()
 
 ctx.beginPath()
-ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)  # 第二個圓
+ctx.arc(160, 160, 141, 0.75 * math.pi, 1.25 * math.pi)
+ctx.fillStyle = "Coral"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(160, 160, 141, 1.25 * math.pi, 1.75 * math.pi)
+ctx.fillStyle = "LimeGreen"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(160, 160, 141, 1.75 * math.pi, 0.25 * math.pi)
+ctx.fillStyle = "Beige"  
+ctx.fill()
+ctx.stroke()
+
+# 第二個圓
+ctx.beginPath()
+ctx.arc(260, 260, 141, 1.25 * math.pi, 1.75 * math.pi)
+ctx.fillStyle = "DarkOrchid" 
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(260, 260, 141, 1.75 * math.pi, 0.25 * math.pi)
+ctx.fillStyle = "ForestGreen"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(260, 260, 141, 0.25 * math.pi, 0.75 * math.pi)
+ctx.fillStyle = "Gold"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(260, 260, 141, 0.75 * math.pi, 1.25 * math.pi)
+ctx.fillStyle = "Crimson" 
+ctx.fill()
+ctx.stroke()
+
+# 紅方形*2 (4個三角形)
+ctx.strokeStyle = 'red'
+ctx.beginPath()
+ctx.moveTo(60, 60)
+ctx.lineTo(60, 260)
+ctx.lineTo(260, 260)
+ctx.fillStyle = "LightYellow" 
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(60, 60)
+ctx.lineTo(260, 60)
+ctx.lineTo(260, 260)
+ctx.fillStyle = "DarkSlateBlue"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(160, 160)
+ctx.lineTo(360, 160)
+ctx.lineTo(360, 360)
+ctx.fillStyle = "LightCyan" 
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(160, 160)
+ctx.lineTo(160, 360)
+ctx.lineTo(360, 360)
+ctx.fillStyle = "PaleGreen"  
+ctx.fill()
+ctx.stroke()
+
+# 重疊的小方型
+ctx.beginPath()
+ctx.moveTo(160, 160)
+ctx.lineTo(160, 260)
+ctx.lineTo(260, 260)
+ctx.fillStyle = "SteelBlue"  
+ctx.fill()
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(160, 160)
+ctx.lineTo(260, 160)
+ctx.lineTo(260, 260)
+ctx.fillStyle = "MediumPurple" 
+ctx.fill()
+ctx.stroke()
+
+# 藍斜線
+ctx.strokeStyle = 'blue'
+ctx.beginPath()
+ctx.moveTo(60, 60)
+ctx.lineTo(260, 260)
 ctx.stroke()
 </script>
-</p><br />w12 << <a href='w12.html'>Previous</a> <a href='w14_ex.html'>Next</a> >> w14_ex</div>
+</p><br />w12_hw << <a href='w12_hw.html'>Previous</a> <a href='w14_ex.html'>Next</a> >> w14_ex</div>
         
     <!-- footer -->
       <div class="container">
