--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -380,7 +380,7 @@ window.onload=function(){
 addto(1, 100)
 </pre>
 <p><br/><br/></p>
-<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/854b3fb01bdec4afd78abcb3a4b5022d92304a88/%25E9%25A1%258C%25E7%259B%25AE1">題目1程式</a></span></p>
+<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/d78142d105028b673b01973c7594944644b475a5/%25E9%25A1%258C%25E7%259B%25AE1">題目1程式</a></span></p>
 <p>題目二: 延伸上題, 設計一個函式 addto(1, 100), 可以完成上述的累加結果. (以"addto"作為連結標題)</p>
 <p>這個函式接收兩個參數 <code>start</code> 和 <code>end</code>，並回傳從 <code>start</code> 累加到 <code>end</code> 的總和。<code>sum(range(start, end + 1))</code> 會生成一個從 <code>start</code> 到 <code>end</code> 的數字列表，並對其進行累加。</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">def addto(init, addto):
@@ -394,7 +394,7 @@ addto(1, 100)
 </pre>
 <p><br/><br/></p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"></pre>
-<p><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/854b3fb01bdec4afd78abcb3a4b5022d92304a88/%25E9%25A1%258C%25E7%259B%25AE2">addto</a></p>
+<p><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/d78142d105028b673b01973c7594944644b475a5/%25E9%25A1%258C%25E7%259B%25AE2">addto</a></p>
 <p>題目三: 延伸上題, 設計一個函式 add_only_even(1, 100), 可以完成從第一個輸入整數, 累加到第二個輸入變數的累加結果. 頁面中請以 <span>add_only_even 作為連結標題.</span></p>
 <p><span>我們需要只累加範圍內的偶數，可以利用條件判斷 <code>i % 2 == 0</code> 來篩選出偶數。<code>sum(i for i in range(start, end + 1) if i % 2 == 0)</code> 會累加所有符合條件的偶數。</span></p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">def add_only_even(init, addto):
@@ -407,7 +407,7 @@ addto(1, 100)
 # 計算從 1 到 100 之間的偶數總和
 add_only_even(1, 100)
 </pre>
-<p><span><a href="https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/854b3fb01bdec4afd78abcb3a4b5022d92304a88/%25E9%25A1%258C%25E7%259B%25AE3"> add_only_even</a></span></p>
+<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/d78142d105028b673b01973c7594944644b475a5/%25E9%25A1%258C%25E7%259B%25AE3"> add_only_even</a></span></p>
 <p><span>題目四: 延伸上題, 設計一個函式 add_avoid_8(1, 100), 可以完成從第一個輸入整數, 累加到第二個輸入變數的累加過程, 必須避開數字出現"8"的整數, 頁面中請以 add_avoid_8 作為連結標題.</span></p>
 <p><span><strong>設計思考</strong><br/>我們需要避開數字中出現 "8" 的整數。可以將數字轉換成字串並檢查字串中是否包含 <code>"8"</code>，然後排除這些數字。<code>sum(i for i in range(start, end + 1) if '8' not in str(i))</code> 可以達到此目的</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def add_avoid_8(init, addto):
@@ -421,7 +421,7 @@ add_only_even(1, 100)
 add_avoid_8(1, 100)
 </pre>
 <p></p>
-<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/854b3fb01bdec4afd78abcb3a4b5022d92304a88/%25E9%25A1%258C%25E7%259B%25AE4">add_avoid_8</a></span></p>
+<p><span><a href="https://glorious-spork-r4p4rv4q99wqfxgvj-8081.app.github.dev/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/4db4ae3a059c735cef601fa7ef40b466/raw/d78142d105028b673b01973c7594944644b475a5/%25E9%25A1%258C%25E7%259B%25AE4">add_avoid_8</a></span></p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"></pre>
 <p></p>
 <!-- Python 程式碼 -->
@@ -538,7 +538,149 @@ draw_circles(x1, y1, radius, x2, y2, radius, x3, y3, radius)
 <p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p><h2>HW 2 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 2 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
-<h1>HW 3</h1>
+<p></p>
+<p></p>
+<h3>w16_exam1</h3>
+<p><canvas height="500" id="canvas" style="border: 1px solid black;" width="900"></canvas></p>
+<!-- 导入 Brython 库 -->
+<script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython_stdlib.js"></script>
+<!-- 启动 Brython -->
+<script>
+window.onload = function () {
+    brython();
+};
+</script>
+<script type="text/python">
+import math
+from browser import document
+
+# 获取画布与绘图上下文
+canvas = document["canvas"]
+ctx = canvas.getContext("2d")
+
+# 设置起始坐标 (31, 13)
+origin_x = 31 * 15  # 乘以15，增加比例，适配画布
+origin_y = 13 * 15  # 乘以15，增加比例，适配画布
+spacing = 80  # 每个图形之间的间距，调整为80避免重叠
+
+# 调整起始坐标，向左移动
+offset_x = -200  # 将此值设置为更小的负值，确保图形向左偏移
+
+# 绘制坐标轴
+def draw_axes():
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+
+    # X轴
+    ctx.beginPath()
+    ctx.moveTo(origin_x + offset_x, origin_y)
+    ctx.lineTo(canvas.width, origin_y)  # 向右延伸
+    ctx.stroke()
+
+    # Y轴
+    ctx.beginPath()
+    ctx.moveTo(origin_x + offset_x, origin_y)
+    ctx.lineTo(origin_x + offset_x, canvas.height)  # 向下延伸
+    ctx.stroke()
+
+    # 标记原点
+    ctx.fillStyle = "black"
+    ctx.font = "12px Arial"
+    ctx.fillText(f"({31}, {13})", origin_x + offset_x + 5, origin_y - 5)
+
+# 绘制橘色六边形
+def draw_orange_hexagon(x, y, radius):
+    ctx.fillStyle = "orange"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.beginPath()
+    for i in range(6):
+        angle = math.pi / 3 * i
+        x_offset = x + radius * math.cos(angle)
+        y_offset = y + radius * math.sin(angle)
+        if i == 0:
+            ctx.moveTo(x_offset, y_offset)
+        else:
+            ctx.lineTo(x_offset, y_offset)
+    ctx.closePath()
+    ctx.fill()
+    ctx.stroke()
+
+# 绘制绿色菱形
+def draw_green_diamond(x, y, width, height):
+    ctx.fillStyle = "green"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.beginPath()
+    ctx.moveTo(x, y - height / 2)  # 上顶点
+    ctx.lineTo(x + width / 2, y)  # 右顶点
+    ctx.lineTo(x, y + height / 2)  # 下顶点
+    ctx.lineTo(x - width / 2, y)  # 左顶点
+    ctx.closePath()
+    ctx.fill()
+    ctx.stroke()
+
+# 绘制正三角形
+def draw_equilateral_triangle(x, y, side_length):
+    ctx.fillStyle = "blue"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.beginPath()
+    height = math.sqrt(3) / 2 * side_length  # 计算等边三角形的高度
+    ctx.moveTo(x, y - height / 2)  # 顶点
+    ctx.lineTo(x - side_length / 2, y + height / 2)  # 左下顶点
+    ctx.lineTo(x + side_length / 2, y + height / 2)  # 右下顶点
+    ctx.closePath()
+    ctx.fill()
+    ctx.stroke()
+
+# 绘制粉红圆形
+def draw_pink_circle(x, y, radius):
+    ctx.fillStyle = "pink"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.beginPath()
+    ctx.arc(x, y, radius, 0, 2 * math.pi)
+    ctx.fill()
+    ctx.stroke()
+
+# 绘制黄色正方形
+def draw_yellow_square(x, y, size):
+    ctx.fillStyle = "yellow"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.fillRect(x, y, size, size)
+    ctx.strokeRect(x, y, size, size)
+
+# 绘制深蓝色长方形
+def draw_dark_blue_rectangle(x, y, width, height):
+    ctx.fillStyle = "darkblue"
+    ctx.strokeStyle = "black"
+    ctx.lineWidth = 2
+    ctx.fillRect(x, y, width, height)
+    ctx.strokeRect(x, y, width, height)
+
+# 主程序：清空画布并绘图
+def draw():
+    ctx.clearRect(0, 0, canvas.width, canvas.height)  # 清空画布
+    draw_axes()  # 绘制坐标轴
+
+    # 计算象限内的位置
+    shape_x_start = origin_x + spacing + offset_x  # 起始的横坐标
+    shape_y_start = origin_y + spacing  # 起始的纵坐标
+
+    # 调整图形位置，使它们分布在象限内
+    draw_orange_hexagon(shape_x_start, shape_y_start, 50)  # 橘色六边形
+    draw_green_diamond(shape_x_start + spacing, shape_y_start, 60, 120)  # 绿色菱形
+    draw_equilateral_triangle(shape_x_start + spacing * 2, shape_y_start, 60)  # 正三角形
+    draw_pink_circle(shape_x_start + spacing * 3, shape_y_start, 40)  # 粉红圆形
+    draw_yellow_square(shape_x_start + spacing * 4, shape_y_start, 50)  # 黄色正方形
+    draw_dark_blue_rectangle(shape_x_start + spacing * 5, shape_y_start, 100, 50)  # 深蓝色长方形
+
+# 初始化绘图
+draw()
+</script><h1>HW 3</h1>
 <h4>主題13: Python 的數字、演算法與迴圈 (20%)</h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 4 and Part 5</p>
 <p>完成上述流程整理後, 請將 HW3 自評分數輸入 cp2024 自評表單中.</p>
